# Kolkra-NG

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.EXAMPLE.toml  pyproject.toml
.github/workflows/: main.yml
kolkra_ng/: bot.py  checks.py  config.py  context.py  converters.py  db_types.py  embeds.py  error_handling.py  help.py  main.py  utils.py  webhooks.py
kolkra_ng/cogs/: admin.py  basic.py  bump_reminder.py  downtime_alerts.py  ntfy_logging.py  ping_rate_limits.py  random.py  tools.py  welcome.py
kolkra_ng/cogs/lanarchy/: __init__.py  config.py  models.py  views.py
kolkra_ng/cogs/mod/: __init__.py  converters.py  message_select.py
kolkra_ng/cogs/mod/mod_actions/: abc.py  channel_mute.py  server_ban.py  softban.py  warning.py
kolkra_ng/cogs/translate/: __init__.py  api.py
kolkra_ng/enums/: by_name.py  staff_level.py
kolkra_ng/views/: confirm.py  pager.py
tests/: test_config.py  test_foo.py
